--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha06"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha06"
 
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.6.2"
+    implementation "com.squareup.retrofit2:converter-gson:2.6.2"
+
+    implementation 'com.orhanobut:logger:2.2.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
+
 }
