--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,6 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
 
     implementation "androidx.browser:browser:1.2.0"
+
+    implementation 'com.airbnb.android:lottie:3.3.1'
 }
